Refactor: Improve nullability annotations and UI consistency
This commit introduces several changes to improve code robustness through stricter nullability annotations and enhances UI consistency across various elements.

- **Nullability Annotations:**
    - `DiaryEntry.java`: Removed `@NonNull` from `type` field as it's implicitly non-null due to `setType` validation.
    - `Plant.java`: Added `@NonNull` to `getName()` and removed `setType` null check, as name is validated.
    - `Reminder.java`: Removed `@NonNull` from `message` field, as `setMessage` ensures non-nullability.
    - `PlantDatabaseMigrationTest.java`: Removed `@NonNull` from `ReminderV1.message` to align with entity changes.
    - `MainActivity.java`: Added `@NonNull` to `Intent` parameter in `onNewIntent`.
    - `BarChartView.java`: Added `@NonNull` to `Canvas` parameter in `onDraw`.
    - `PlantDetailPresenterTest.java`: Added `@NonNull` to `Callback` parameter in `FakeExportManager.export`.
    - `ExportProgressTest.java`: Added `@NonNull` to `uri` and `callback` parameters in `FakeExportManager.export`.
    - `PlantListPresenterTest.java`: Added `@NonNull` to `uri`, `callback` in `FakeExportManager.export`, and `uri`, `mode`, `cb` in `FakeImportManager.importData`.

- **UI Consistency and Accessibility:**
    - `dialog_species_target.xml`, `dialog_diary_entry.xml`, `dialog_edit_reminder.xml`, `fragment_calibration.xml`: Added `android:minHeight="48dp"` to `EditText` and `Spinner` elements for better touch target size.
    - `fragment_plant_edit.xml`: Changed `android:focusable="false"` to `android:focusable="true"` for `input_acquired` `TextInputEditText` to allow focus.
    - `strings.xml`, `values-de/strings.xml`, `values-es/strings.xml`, `values-fr/strings.xml`: Replaced double hyphen (`--`) placeholders with em dash (`—`) for improved visual consistency.
    - `fragment_measurement_list.xml`: Added `android:minHeight="32dp"` to the `Spinner`.
    - `fragment_stats.xml`: Changed `Button` `lay